--- a/spring-yf/spring-yf.gradle
+++ b/spring-yf/spring-yf.gradle
@@ -14,6 +14,13 @@ dependencies {
     implementation(project(":spring-beans"))      // ✅
     implementation(project(":spring-core"))       // ✅
     implementation(project(":spring-context"))    // ✅
+    implementation(project(":spring-aop"))
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    // AspectJ 依赖
+    implementation 'org.aspectj:aspectjweaver:1.9.8'
+
+
+
 
     // 测试依赖
     testImplementation platform('org.junit:junit-bom:5.10.0')
