--- a/spring-yf/spring-yf.gradle
+++ b/spring-yf/spring-yf.gradle
@@ -15,7 +15,10 @@ dependencies {
     implementation(project(":spring-core"))       // ✅
     implementation(project(":spring-context"))    // ✅
     implementation(project(":spring-aop"))
+    implementation(project(":spring-jdbc"))
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'mysql:mysql-connector-java:8.0.33' // 请根据需要选择版本
+
     // AspectJ 依赖
     implementation 'org.aspectj:aspectjweaver:1.9.8'
 
