--- a/spring-yf/spring-yf.gradle
+++ b/spring-yf/spring-yf.gradle
@@ -16,18 +16,21 @@ dependencies {
     implementation(project(":spring-context"))    // ✅
     implementation(project(":spring-aop"))
     implementation(project(":spring-jdbc"))
+    implementation(project(":spring-web"))
+    implementation(project(":spring-webmvc"))
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'mysql:mysql-connector-java:8.0.33' // 请根据需要选择版本
+    implementation "javax.servlet:javax.servlet-api"
+
 
     // AspectJ 依赖
     implementation 'org.aspectj:aspectjweaver:1.9.8'
 
-
-
-
     // 测试依赖
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+
 
     // 添加 Logback 作为日志实现（SLF4J + Logback）
 //    implementation 'ch.qos.logback:logback-classic:1.2.11'
